[package]
name = "podmem"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
version = "0.1.0-devel"
edition = "2018"

[features]
default = ["std"]
f16 = ["half"]
std = []

[dependencies]
#cuda = { path = "../libcuda", optional = true }
#cuda = { git = "https://github.com/peterhj/libcuda", optional = true }
cuda = { version = "~0.4.0-pre.0", optional = true }
half = { version = "^1.3", optional = true }
